# systemds

./: pom.xml
.github/workflows/: applicationTests.yml  documentation.yml  functionsTests.yml  python.yml
scripts/ma/: experiment.dml
src/main/cpp/: CMakeLists.txt  libhe.cpp  libhe.h  systemds.cpp  systemds.h
src/main/cpp/he/: CMakeLists.txt
src/main/java/org/apache/sysds/common/: Types.java
src/main/java/org/apache/sysds/parser/: Statement.java
src/main/java/org/apache/sysds/runtime/controlprogram/federated/: FederatedData.java  FederatedRequest.java  FederatedResponse.java  FederatedStatistics.java  FederatedWorker.java  FederatedWorkerHandler.java
src/main/java/org/apache/sysds/runtime/controlprogram/paramserv/: NetworkTimer.java  (+5 more)
src/main/java/org/apache/sysds/runtime/controlprogram/paramserv/homomorphicEncryption/cpp/: CMakeLists.txt
src/main/java/org/apache/sysds/runtime/controlprogram/paramserv/homomorphicEncryption/cpp/include/: org_apache_sysds_runtime_controlprogram_paramserv_homomorphicEncryption_SEALClient.h  org_apache_sysds_runtime_controlprogram_paramserv_homomorphicEncryption_SEALServer.h
src/main/java/org/apache/sysds/runtime/controlprogram/paramserv/homomorphicEncryption/cpp/src/: org_apache_sysds_runtime_controlprogram_paramserv_homomorphicEncryption_SEAL.cpp
src/main/java/org/apache/sysds/runtime/privacy/: PrivacyMonitor.java
src/main/java/org/apache/sysds/utils/: NativeHelper.java  Statistics.java
src/main/java/org/apache/sysds/utils/stats/: ParamServStatistics.java
src/test/java/org/apache/sysds/test/: AutomatedTestBase.java
(+10 files in other folders)
